# sparkle

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  book.toml  custom.css
.github/workflows/: ci.yml  mdbook.yml  release-plz.yml
book/: 404.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
book/core-identity/: overview.html
book/examples/: basic-usage.html
book/integration/: getting-started.html
identity/: 03-partnership.md
md/: SUMMARY.md  introduction.md
md/core-identity/: overview.md
md/examples/: basic-usage.md
md/integration/: acp-component.md  getting-started.md  prompts.md  tools.md
sparkle-mcp/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
sparkle-mcp/identity/: 01-embodiment-methodology.md  02-collaboration-identity.md  03-partnership.md
sparkle-mcp/src/: acp_component.rs  constants.rs  context_loader.rs  embodiment.rs  lib.rs  main.rs  server.rs  sparkle_loader.rs  types.rs
sparkle-mcp/src/prompts/: checkpoint.rs  embodiment_test.rs  enrich_profile.rs  mod.rs  presence_check.rs  show_thinking.rs  sparkle.rs  sparkler_identity.rs
sparkle-mcp/src/tools/: checkpoint.rs  create_sparkler.rs  embody_sparkle.rs  fetch_profile_data.rs  list_sparklers.rs  load_evolution.rs  mod.rs  rename_character.rs  rename_sparkler.rs  save_insight.rs  setup_sparkle.rs  test_embodiment.rs  update_collaborator_profile.rs  update_sparkler_identity.rs
sparkle-mcp/tests/: acp_embodiment_test.rs
src/: acp_component.rs  context_loader.rs
src/prompts/: embodiment_test.rs  enrich_profile.rs  presence_check.rs  show_thinking.rs  sparkle.rs
src/tools/: rename_sparkler.rs  save_insight.rs
tests/: acp_embodiment_test.rs
